CHanged the width of new-project from 100% to 50vw to make sure it shows as expected even when the side menu is collapsed

--- a/src/components/SideMenu/Project/Project.module.css
+++ b/src/components/SideMenu/Project/Project.module.css
@@ -1,5 +1,6 @@
 .new-project{
-    width: 100%;
+    width: 50vw;
+    left: 0;
     height: 100%;
     background-color: #171717;
     display: flex;
@@ -10,6 +11,7 @@
     animation-name: showNewProject;
     animation-duration: 0.1s;
     z-index: 10;
+    border-right: 1px solid rgba(221, 221, 221, 0.1)
 }
 
 @keyframes showNewProject {
@@ -18,7 +20,7 @@
         opacity: 0;
     }
     to{
-        width: 100%;
+        width: 50vw;
         opacity: 1;
     }
 }
